compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM np_start_state np_start_func_dir ID SEMICOLON declaration_loop main_function
Rule 2     main_function -> MAIN np_add_main_internal_scope OPEN_PARENTHESIS CLOSE_PARENTHESIS OPEN_KEY variable_declaration_loop np_generate_variable_workspace np_add_function_start_quad statement_loop CLOSE_KEY np_end_function_main
Rule 3     np_add_main_internal_scope -> epsilon
Rule 4     np_start_state -> epsilon
Rule 5     np_start_func_dir -> epsilon
Rule 6     declaration_loop -> declaration declaration_loop
Rule 7     declaration_loop -> epsilon
Rule 8     statement_loop -> statement statement_loop1
Rule 9     statement_loop1 -> statement statement_loop1
Rule 10    statement_loop1 -> epsilon
Rule 11    declaration -> class_declaration
Rule 12    declaration -> variable_declaration
Rule 13    declaration -> function_declaration
Rule 14    variable -> ID variable1
Rule 15    variable1 -> np_array_access1 OPEN_BRACKET np_array_access2 hyper_exp np_array_access3 CLOSE_BRACKET group_access
Rule 16    variable1 -> DOT ID
Rule 17    variable1 -> epsilon
Rule 18    group_access -> np_array_access4 OPEN_BRACKET hyper_exp np_array_access3 CLOSE_BRACKET np_array_access5
Rule 19    group_access -> np_array_access5
Rule 20    np_array_access1 -> epsilon
Rule 21    np_array_access2 -> epsilon
Rule 22    np_array_access3 -> epsilon
Rule 23    np_array_access4 -> epsilon
Rule 24    np_array_access5 -> epsilon
Rule 25    class_declaration -> CLASS ID class_declaration1 OPEN_KEY class_body CLOSE_KEY SEMICOLON constructor class_declaration2
Rule 26    class_declaration1 -> IS ID
Rule 27    class_declaration1 -> epsilon
Rule 28    class_declaration2 -> class_function class_declaration2
Rule 29    class_declaration2 -> epsilon
Rule 30    class_body -> class_body1 class_body3
Rule 31    class_body1 -> variable_declaration class_body2
Rule 32    class_body2 -> variable_declaration class_body2
Rule 33    class_body2 -> epsilon
Rule 34    class_body3 -> class_function_declaration class_body4
Rule 35    class_body4 -> class_function_declaration class_body4
Rule 36    class_body4 -> epsilon
Rule 37    constructor -> CONSTRUCTOR ID OPEN_PARENTHESIS parameter CLOSE_PARENTHESIS OPEN_KEY statement_loop CLOSE_KEY
Rule 38    variable_declaration_loop -> variable_declaration variable_declaration_loop
Rule 39    variable_declaration_loop -> epsilon
Rule 40    variable_declaration -> VAR np_set_current_var_type data_type np_set_current_var_data_type ID np_set_current_var_name SEMICOLON np_add_variable
Rule 41    variable_declaration -> GROUP np_set_current_var_type ID np_set_current_var_name ASSIGN data_type np_set_current_var_data_type np_add_variable OPEN_BRACKET np_add_dim1_list INT_VALUE np_add_dim1 CLOSE_BRACKET group1 SEMICOLON
Rule 42    variable_declaration -> OBJ np_set_current_var_type ID np_set_current_var_name ASSIGN ID OPEN_PARENTHESIS variable_declaration1 CLOSE_PARENTHESIS SEMICOLON np_add_variable
Rule 43    np_set_current_var_type -> epsilon
Rule 44    np_set_current_var_data_type -> epsilon
Rule 45    np_set_current_var_name -> epsilon
Rule 46    np_add_variable -> epsilon
Rule 47    group1 -> epsilon
Rule 48    group1 -> OPEN_BRACKET np_add_dim2_list INT_VALUE np_add_dim2 CLOSE_BRACKET
Rule 49    np_add_dim1_list -> epsilon
Rule 50    np_add_dim2_list -> epsilon
Rule 51    np_add_dim1 -> epsilon
Rule 52    np_add_dim2 -> epsilon
Rule 53    variable_declaration1 -> hyper_exp_loop
Rule 54    variable_declaration1 -> epsilon
Rule 55    statement -> assignment
Rule 56    statement -> conditional
Rule 57    statement -> cycle
Rule 58    statement -> read
Rule 59    statement -> write
Rule 60    statement -> function_call SEMICOLON
Rule 61    assignment -> variable np_variable_assignment ASSIGN hyper_exp SEMICOLON
Rule 62    np_variable_assignment -> epsilon
Rule 63    np_add_operator -> epsilon
Rule 64    hyper_exp -> super_exp np_hyper_exp hyper_exp1
Rule 65    hyper_exp1 -> AND np_add_operator super_exp np_hyper_exp hyper_exp1
Rule 66    hyper_exp1 -> OR np_add_operator super_exp np_hyper_exp hyper_exp1
Rule 67    hyper_exp1 -> epsilon
Rule 68    np_hyper_exp -> epsilon
Rule 69    super_exp -> exp np_super_exp super_exp1
Rule 70    super_exp1 -> GREATER_THAN np_add_operator exp np_super_exp super_exp1
Rule 71    super_exp1 -> LESS_THAN np_add_operator exp np_super_exp super_exp1
Rule 72    super_exp1 -> EQUAL_TO np_add_operator exp np_super_exp super_exp1
Rule 73    super_exp1 -> NOT_EQUAL_TO np_add_operator exp np_super_exp super_exp1
Rule 74    super_exp1 -> epsilon
Rule 75    np_super_exp -> epsilon
Rule 76    exp -> term np_exp exp1
Rule 77    exp1 -> PLUS np_add_operator term np_exp exp1
Rule 78    exp1 -> MINUS np_add_operator term np_exp exp1
Rule 79    exp1 -> epsilon
Rule 80    np_exp -> epsilon
Rule 81    term -> factor np_term term1
Rule 82    term1 -> MULTIPLICATION np_add_operator factor np_term term1
Rule 83    term1 -> DIVISION np_add_operator factor np_term term1
Rule 84    term1 -> epsilon
Rule 85    np_term -> epsilon
Rule 86    factor -> function_call
Rule 87    factor -> float_value np_add_constant_virtual_address
Rule 88    factor -> int_value np_add_constant_virtual_address
Rule 89    factor -> BOOL_VALUE np_add_constant_virtual_address
Rule 90    factor -> STRING_VALUE np_add_constant_virtual_address
Rule 91    factor -> variable
Rule 92    factor -> OPEN_PARENTHESIS np_add_open_parenthesis hyper_exp CLOSE_PARENTHESIS np_remove_open_parenthesis
Rule 93    float_value -> FLOAT_VALUE
Rule 94    float_value -> MINUS FLOAT_VALUE
Rule 95    int_value -> INT_VALUE
Rule 96    int_value -> MINUS INT_VALUE
Rule 97    np_add_constant_virtual_address -> epsilon
Rule 98    np_add_open_parenthesis -> epsilon
Rule 99    np_remove_open_parenthesis -> epsilon
Rule 100   data_type -> INT
Rule 101   data_type -> FLOAT
Rule 102   data_type -> STRING
Rule 103   data_type -> BOOL
Rule 104   class_function_declaration -> FUNCTION ID OPEN_PARENTHESIS parameter CLOSE_PARENTHESIS RETURNS return_arg SEMICOLON
Rule 105   return_arg -> data_type
Rule 106   return_arg -> VOID
Rule 107   parameter -> data_type ID parameter1
Rule 108   parameter -> epsilon
Rule 109   parameter1 -> COMMA data_type ID parameter1
Rule 110   parameter1 -> epsilon
Rule 111   np_add_parameters_to_var_table -> epsilon
Rule 112   conditional -> IF OPEN_PARENTHESIS hyper_exp CLOSE_PARENTHESIS np_if_1 OPEN_KEY statement_loop CLOSE_KEY conditional1
Rule 113   conditional1 -> ELSE np_if_3 OPEN_KEY statement_loop CLOSE_KEY np_if_2
Rule 114   conditional1 -> np_if_2
Rule 115   np_if_1 -> epsilon
Rule 116   np_if_2 -> epsilon
Rule 117   np_if_3 -> epsilon
Rule 118   cycle -> FOR ID np_for_1 ASSIGN hyper_exp np_for_2 TO hyper_exp np_for_3 cycle_for
Rule 119   cycle -> WHILE np_while_1 OPEN_PARENTHESIS hyper_exp CLOSE_PARENTHESIS np_while_2 cycle_while
Rule 120   cycle -> DO np_do_while_1 OPEN_KEY statement_loop CLOSE_KEY WHILE OPEN_PARENTHESIS hyper_exp CLOSE_PARENTHESIS np_do_while_2 SEMICOLON
Rule 121   cycle_for -> OPEN_KEY statement_loop CLOSE_KEY np_for_4
Rule 122   np_for_1 -> epsilon
Rule 123   np_for_2 -> epsilon
Rule 124   np_for_3 -> epsilon
Rule 125   np_for_4 -> epsilon
Rule 126   cycle_while -> OPEN_KEY statement_loop CLOSE_KEY np_while_3
Rule 127   np_while_1 -> epsilon
Rule 128   np_while_2 -> epsilon
Rule 129   np_while_3 -> epsilon
Rule 130   np_do_while_1 -> epsilon
Rule 131   np_do_while_2 -> epsilon
Rule 132   read -> READ OPEN_PARENTHESIS variable_loop CLOSE_PARENTHESIS SEMICOLON
Rule 133   variable_loop -> variable variable_loop1
Rule 134   variable_loop1 -> COMMA variable variable_loop1
Rule 135   variable_loop1 -> epsilon
Rule 136   write -> WRITE OPEN_PARENTHESIS write_hyper_exp_loop CLOSE_PARENTHESIS SEMICOLON
Rule 137   write_hyper_exp_loop -> hyper_exp np_add_write_quad write_hyper_exp_loop1
Rule 138   write_hyper_exp_loop1 -> COMMA hyper_exp np_add_write_quad write_hyper_exp_loop1
Rule 139   write_hyper_exp_loop1 -> epsilon
Rule 140   np_add_write_quad -> epsilon
Rule 141   hyper_exp_loop -> hyper_exp hyper_exp_loop1
Rule 142   hyper_exp_loop1 -> COMMA hyper_exp hyper_exp_loop1
Rule 143   hyper_exp_loop1 -> epsilon
Rule 144   function_call -> ID function_call1 OPEN_PARENTHESIS np_start_function_param_counter np_add_open_parenthesis function_call2 np_remove_open_parenthesis CLOSE_PARENTHESIS
Rule 145   function_call1 -> DOT ID
Rule 146   function_call1 -> np_validate_function_existance_and_era
Rule 147   np_validate_function_existance_and_era -> epsilon
Rule 148   np_start_function_param_counter -> epsilon
Rule 149   function_call2 -> function_hyper_exp_loop
Rule 150   function_call2 -> epsilon
Rule 151   function_hyper_exp_loop -> hyper_exp np_check_param_match function_hyper_exp_loop1
Rule 152   function_hyper_exp_loop1 -> COMMA hyper_exp np_check_param_match function_hyper_exp_loop1
Rule 153   function_hyper_exp_loop1 -> epsilon
Rule 154   np_check_param_match -> epsilon
Rule 155   class_function -> AT_CLASS ID FUNCTION ID OPEN_PARENTHESIS parameter CLOSE_PARENTHESIS RETURNS return_arg OPEN_KEY function_statement_loop function_return CLOSE_KEY
Rule 156   function_declaration -> FUNCTION ID np_add_function_internal_scope OPEN_PARENTHESIS parameter np_add_parameters_to_var_table CLOSE_PARENTHESIS RETURNS return_arg np_set_function_return_type OPEN_KEY variable_declaration_loop np_generate_variable_workspace np_add_function_start_quad function_statement_loop function_return CLOSE_KEY np_end_function
Rule 157   np_generate_variable_workspace -> epsilon
Rule 158   np_add_function_start_quad -> epsilon
Rule 159   np_end_function_main -> epsilon
Rule 160   np_end_function -> epsilon
Rule 161   np_add_function_internal_scope -> epsilon
Rule 162   np_set_function_return_type -> epsilon
Rule 163   function_return -> RETURN hyper_exp SEMICOLON
Rule 164   function_return -> RETURN SEMICOLON
Rule 165   function_statement_loop -> statement_loop
Rule 166   function_statement_loop -> epsilon
Rule 167   epsilon -> <empty>

Terminals, with rules where they appear

AND                  : 65
ASSIGN               : 41 42 61 118
AT_CLASS             : 155
BOOL                 : 103
BOOL_VALUE           : 89
CLASS                : 25
CLOSE_BRACKET        : 15 18 41 48
CLOSE_KEY            : 2 25 37 112 113 120 121 126 155 156
CLOSE_PARENTHESIS    : 2 37 42 92 104 112 119 120 132 136 144 155 156
COMMA                : 109 134 138 142 152
CONSTRUCTOR          : 37
DIVISION             : 83
DO                   : 120
DOT                  : 16 145
ELSE                 : 113
EQUAL_TO             : 72
FLOAT                : 101
FLOAT_VALUE          : 93 94
FOR                  : 118
FUNCTION             : 104 155 156
GREATER_THAN         : 70
GROUP                : 41
ID                   : 1 14 16 25 26 37 40 41 42 42 104 107 109 118 144 145 155 155 156
IF                   : 112
INT                  : 100
INT_VALUE            : 41 48 95 96
IS                   : 26
LESS_THAN            : 71
MAIN                 : 2
MINUS                : 78 94 96
MULTIPLICATION       : 82
NOT_EQUAL_TO         : 73
OBJ                  : 42
OPEN_BRACKET         : 15 18 41 48
OPEN_KEY             : 2 25 37 112 113 120 121 126 155 156
OPEN_PARENTHESIS     : 2 37 42 92 104 112 119 120 132 136 144 155 156
OR                   : 66
PLUS                 : 77
PROGRAM              : 1
READ                 : 132
RETURN               : 163 164
RETURNS              : 104 155 156
SEMICOLON            : 1 25 40 41 42 60 61 104 120 132 136 163 164
STRING               : 102
STRING_VALUE         : 90
TO                   : 118
VAR                  : 40
VOID                 : 106
WHILE                : 119 120
WRITE                : 136
error                : 

Nonterminals, with rules where they appear

assignment           : 55
class_body           : 25
class_body1          : 30
class_body2          : 31 32
class_body3          : 30
class_body4          : 34 35
class_declaration    : 11
class_declaration1   : 25
class_declaration2   : 25 28
class_function       : 28
class_function_declaration : 34 35
conditional          : 56
conditional1         : 112
constructor          : 25
cycle                : 57
cycle_for            : 118
cycle_while          : 119
data_type            : 40 41 105 107 109
declaration          : 6
declaration_loop     : 1 6
epsilon              : 3 4 5 7 10 17 20 21 22 23 24 27 29 33 36 39 43 44 45 46 47 49 50 51 52 54 62 63 67 68 74 75 79 80 84 85 97 98 99 108 110 111 115 116 117 122 123 124 125 127 128 129 130 131 135 139 140 143 147 148 150 153 154 157 158 159 160 161 162 166
exp                  : 69 70 71 72 73
exp1                 : 76 77 78
factor               : 81 82 83
float_value          : 87
function_call        : 60 86
function_call1       : 144
function_call2       : 144
function_declaration : 13
function_hyper_exp_loop : 149
function_hyper_exp_loop1 : 151 152
function_return      : 155 156
function_statement_loop : 155 156
group1               : 41
group_access         : 15
hyper_exp            : 15 18 61 92 112 118 118 119 120 137 138 141 142 151 152 163
hyper_exp1           : 64 65 66
hyper_exp_loop       : 53
hyper_exp_loop1      : 141 142
int_value            : 88
main_function        : 1
np_add_constant_virtual_address : 87 88 89 90
np_add_dim1          : 41
np_add_dim1_list     : 41
np_add_dim2          : 48
np_add_dim2_list     : 48
np_add_function_internal_scope : 156
np_add_function_start_quad : 2 156
np_add_main_internal_scope : 2
np_add_open_parenthesis : 92 144
np_add_operator      : 65 66 70 71 72 73 77 78 82 83
np_add_parameters_to_var_table : 156
np_add_variable      : 40 41 42
np_add_write_quad    : 137 138
np_array_access1     : 15
np_array_access2     : 15
np_array_access3     : 15 18
np_array_access4     : 18
np_array_access5     : 18 19
np_check_param_match : 151 152
np_do_while_1        : 120
np_do_while_2        : 120
np_end_function      : 156
np_end_function_main : 2
np_exp               : 76 77 78
np_for_1             : 118
np_for_2             : 118
np_for_3             : 118
np_for_4             : 121
np_generate_variable_workspace : 2 156
np_hyper_exp         : 64 65 66
np_if_1              : 112
np_if_2              : 113 114
np_if_3              : 113
np_remove_open_parenthesis : 92 144
np_set_current_var_data_type : 40 41
np_set_current_var_name : 40 41 42
np_set_current_var_type : 40 41 42
np_set_function_return_type : 156
np_start_func_dir    : 1
np_start_function_param_counter : 144
np_start_state       : 1
np_super_exp         : 69 70 71 72 73
np_term              : 81 82 83
np_validate_function_existance_and_era : 146
np_variable_assignment : 61
np_while_1           : 119
np_while_2           : 119
np_while_3           : 126
parameter            : 37 104 155 156
parameter1           : 107 109
program              : 0
read                 : 58
return_arg           : 104 155 156
statement            : 8 9
statement_loop       : 2 37 112 113 120 121 126 165
statement_loop1      : 8 9
super_exp            : 64 65 66
super_exp1           : 69 70 71 72 73
term                 : 76 77 78
term1                : 81 82 83
variable             : 61 91 133 134
variable1            : 14
variable_declaration : 12 31 32 38
variable_declaration1 : 42
variable_declaration_loop : 2 38 156
variable_loop        : 132
variable_loop1       : 133 134
write                : 59
write_hyper_exp_loop : 136
write_hyper_exp_loop1 : 137 138

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM np_start_state np_start_func_dir ID SEMICOLON declaration_loop main_function

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . np_start_state np_start_func_dir ID SEMICOLON declaration_loop main_function
    (4) np_start_state -> . epsilon
    (167) epsilon -> .

    ID              reduce using rule 167 (epsilon -> .)

    np_start_state                 shift and go to state 3
    epsilon                        shift and go to state 4

state 3

    (1) program -> PROGRAM np_start_state . np_start_func_dir ID SEMICOLON declaration_loop main_function
    (5) np_start_func_dir -> . epsilon
    (167) epsilon -> .

    ID              reduce using rule 167 (epsilon -> .)

    np_start_func_dir              shift and go to state 5
    epsilon                        shift and go to state 6

state 4

    (4) np_start_state -> epsilon .

    ID              reduce using rule 4 (np_start_state -> epsilon .)


state 5

    (1) program -> PROGRAM np_start_state np_start_func_dir . ID SEMICOLON declaration_loop main_function

    ID              shift and go to state 7


state 6

    (5) np_start_func_dir -> epsilon .

    ID              reduce using rule 5 (np_start_func_dir -> epsilon .)


state 7

    (1) program -> PROGRAM np_start_state np_start_func_dir ID . SEMICOLON declaration_loop main_function

    SEMICOLON       shift and go to state 8


state 8

    (1) program -> PROGRAM np_start_state np_start_func_dir ID SEMICOLON . declaration_loop main_function
    (6) declaration_loop -> . declaration declaration_loop
    (7) declaration_loop -> . epsilon
    (11) declaration -> . class_declaration
    (12) declaration -> . variable_declaration
    (13) declaration -> . function_declaration
    (167) epsilon -> .
    (25) class_declaration -> . CLASS ID class_declaration1 OPEN_KEY class_body CLOSE_KEY SEMICOLON constructor class_declaration2
    (40) variable_declaration -> . VAR np_set_current_var_type data_type np_set_current_var_data_type ID np_set_current_var_name SEMICOLON np_add_variable
    (41) variable_declaration -> . GROUP np_set_current_var_type ID np_set_current_var_name ASSIGN data_type np_set_current_var_data_type np_add_variable OPEN_BRACKET np_add_dim1_list INT_VALUE np_add_dim1 CLOSE_BRACKET group1 SEMICOLON
    (42) variable_declaration -> . OBJ np_set_current_var_type ID np_set_current_var_name ASSIGN ID OPEN_PARENTHESIS variable_declaration1 CLOSE_PARENTHESIS SEMICOLON np_add_variable
    (156) function_declaration -> . FUNCTION ID np_add_function_internal_scope OPEN_PARENTHESIS parameter np_add_parameters_to_var_table CLOSE_PARENTHESIS RETURNS return_arg np_set_function_return_type OPEN_KEY variable_declaration_loop np_generate_variable_workspace np_add_function_start_quad function_statement_loop function_return CLOSE_KEY np_end_function

    MAIN            reduce using rule 167 (epsilon -> .)
    CLASS           shift and go to state 15
    VAR             shift and go to state 16
    GROUP           shift and go to state 17
    OBJ             shift and go to state 18
    FUNCTION        shift and go to state 19

    declaration_loop               shift and go to state 9
    declaration                    shift and go to state 10
    epsilon                        shift and go to state 11
    class_declaration              shift and go to state 12
    variable_declaration           shift and go to state 13
    function_declaration           shift and go to state 14

state 9

    (1) program -> PROGRAM np_start_state np_start_func_dir ID SEMICOLON declaration_loop . main_function
    (2) main_function -> . MAIN np_add_main_internal_scope OPEN_PARENTHESIS CLOSE_PARENTHESIS OPEN_KEY variable_declaration_loop np_generate_variable_workspace np_add_function_start_quad statement_loop CLOSE_KEY np_end_function_main

    MAIN            shift and go to state 21

    main_function                  shift and go to state 20

state 10

    (6) declaration_loop -> declaration . declaration_loop
    (6) declaration_loop -> . declaration declaration_loop
    (7) declaration_loop -> . epsilon
    (11) declaration -> . class_declaration
    (12) declaration -> . variable_declaration
    (13) declaration -> . function_declaration
    (167) epsilon -> .
    (25) class_declaration -> . CLASS ID class_declaration1 OPEN_KEY class_body CLOSE_KEY SEMICOLON constructor class_declaration2
    (40) variable_declaration -> . VAR np_set_current_var_type data_type np_set_current_var_data_type ID np_set_current_var_name SEMICOLON np_add_variable
    (41) variable_declaration -> . GROUP np_set_current_var_type ID np_set_current_var_name ASSIGN data_type np_set_current_var_data_type np_add_variable OPEN_BRACKET np_add_dim1_list INT_VALUE np_add_dim1 CLOSE_BRACKET group1 SEMICOLON
    (42) variable_declaration -> . OBJ np_set_current_var_type ID np_set_current_var_name ASSIGN ID OPEN_PARENTHESIS variable_declaration1 CLOSE_PARENTHESIS SEMICOLON np_add_variable
    (156) function_declaration -> . FUNCTION ID np_add_function_internal_scope OPEN_PARENTHESIS parameter np_add_parameters_to_var_table CLOSE_PARENTHESIS RETURNS return_arg np_set_function_return_type OPEN_KEY variable_declaration_loop np_generate_variable_workspace np_add_function_start_quad function_statement_loop function_return CLOSE_KEY np_end_function

    MAIN            reduce using rule 167 (epsilon -> .)
    CLASS           shift and go to state 15
    VAR             shift and go to state 16
    GROUP           shift and go to state 17
    OBJ             shift and go to state 18
    FUNCTION        shift and go to state 19

    declaration                    shift and go to state 10
    declaration_loop               shift and go to state 22
    epsilon                        shift and go to state 11
    class_declaration              shift and go to state 12
    variable_declaration           shift and go to state 13
    function_declaration           shift and go to state 14

state 11

    (7) declaration_loop -> epsilon .

    MAIN            reduce using rule 7 (declaration_loop -> epsilon .)


state 12

    (11) declaration -> class_declaration .

    CLASS           reduce using rule 11 (declaration -> class_declaration .)
    VAR             reduce using rule 11 (declaration -> class_declaration .)
    GROUP           reduce using rule 11 (declaration -> class_declaration .)
    OBJ             reduce using rule 11 (declaration -> class_declaration .)
    FUNCTION        reduce using rule 11 (declaration -> class_declaration .)
    MAIN            reduce using rule 11 (declaration -> class_declaration .)


state 13

    (12) declaration -> variable_declaration .

    CLASS           reduce using rule 12 (declaration -> variable_declaration .)
    VAR             reduce using rule 12 (declaration -> variable_declaration .)
    GROUP           reduce using rule 12 (declaration -> variable_declaration .)
    OBJ             reduce using rule 12 (declaration -> variable_declaration .)
    FUNCTION        reduce using rule 12 (declaration -> variable_declaration .)
    MAIN            reduce using rule 12 (declaration -> variable_declaration .)


state 14

    (13) declaration -> function_declaration .

    CLASS           reduce using rule 13 (declaration -> function_declaration .)
    VAR             reduce using rule 13 (declaration -> function_declaration .)
    GROUP           reduce using rule 13 (declaration -> function_declaration .)
    OBJ             reduce using rule 13 (declaration -> function_declaration .)
    FUNCTION        reduce using rule 13 (declaration -> function_declaration .)
    MAIN            reduce using rule 13 (declaration -> function_declaration .)


state 15

    (25) class_declaration -> CLASS . ID class_declaration1 OPEN_KEY class_body CLOSE_KEY SEMICOLON constructor class_declaration2

    ID              shift and go to state 23


state 16

    (40) variable_declaration -> VAR . np_set_current_var_type data_type np_set_current_var_data_type ID np_set_current_var_name SEMICOLON np_add_variable
    (43) np_set_current_var_type -> . epsilon
    (167) epsilon -> .

    INT             reduce using rule 167 (epsilon -> .)
    FLOAT           reduce using rule 167 (epsilon -> .)
    STRING          reduce using rule 167 (epsilon -> .)
    BOOL            reduce using rule 167 (epsilon -> .)

    np_set_current_var_type        shift and go to state 24
    epsilon                        shift and go to state 25

state 17

    (41) variable_declaration -> GROUP . np_set_current_var_type ID np_set_current_var_name ASSIGN data_type np_set_current_var_data_type np_add_variable OPEN_BRACKET np_add_dim1_list INT_VALUE np_add_dim1 CLOSE_BRACKET group1 SEMICOLON
    (43) np_set_current_var_type -> . epsilon
    (167) epsilon -> .

    ID              reduce using rule 167 (epsilon -> .)

    np_set_current_var_type        shift and go to state 26
    epsilon                        shift and go to state 25

state 18

    (42) variable_declaration -> OBJ . np_set_current_var_type ID np_set_current_var_name ASSIGN ID OPEN_PARENTHESIS variable_declaration1 CLOSE_PARENTHESIS SEMICOLON np_add_variable
    (43) np_set_current_var_type -> . epsilon
    (167) epsilon -> .

    ID              reduce using rule 167 (epsilon -> .)

    np_set_current_var_type        shift and go to state 27
    epsilon                        shift and go to state 25

state 19

    (156) function_declaration -> FUNCTION . ID np_add_function_internal_scope OPEN_PARENTHESIS parameter np_add_parameters_to_var_table CLOSE_PARENTHESIS RETURNS return_arg np_set_function_return_type OPEN_KEY variable_declaration_loop np_generate_variable_workspace np_add_function_start_quad function_statement_loop function_return CLOSE_KEY np_end_function

    ID              shift and go to state 28


state 20

    (1) program -> PROGRAM np_start_state np_start_func_dir ID SEMICOLON declaration_loop main_function .

    $end            reduce using rule 1 (program -> PROGRAM np_start_state np_start_func_dir ID SEMICOLON declaration_loop main_function .)


state 21

    (2) main_function -> MAIN . np_add_main_internal_scope OPEN_PARENTHESIS CLOSE_PARENTHESIS OPEN_KEY variable_declaration_loop np_generate_variable_workspace np_add_function_start_quad statement_loop CLOSE_KEY np_end_function_main
    (3) np_add_main_internal_scope -> . epsilon
    (167) epsilon -> .

    OPEN_PARENTHESIS reduce using rule 167 (epsilon -> .)

    np_add_main_internal_scope     shift and go to state 29
    epsilon                        shift and go to state 30

state 22

    (6) declaration_loop -> declaration declaration_loop .

    MAIN            reduce using rule 6 (declaration_loop -> declaration declaration_loop .)


state 23

    (25) class_declaration -> CLASS ID . class_declaration1 OPEN_KEY class_body CLOSE_KEY SEMICOLON constructor class_declaration2
    (26) class_declaration1 -> . IS ID
    (27) class_declaration1 -> . epsilon
    (167) epsilon -> .

    IS              shift and go to state 32
    OPEN_KEY        reduce using rule 167 (epsilon -> .)

    class_declaration1             shift and go to state 31
    epsilon                        shift and go to state 33

state 24

    (40) variable_declaration -> VAR np_set_current_var_type . data_type np_set_current_var_data_type ID np_set_current_var_name SEMICOLON np_add_variable
    (100) data_type -> . INT
    (101) data_type -> . FLOAT
    (102) data_type -> . STRING
    (103) data_type -> . BOOL

    INT             shift and go to state 35
    FLOAT           shift and go to state 36
    STRING          shift and go to state 37
    BOOL            shift and go to state 38

    data_type                      shift and go to state 34

state 25

    (43) np_set_current_var_type -> epsilon .

    INT             reduce using rule 43 (np_set_current_var_type -> epsilon .)
    FLOAT           reduce using rule 43 (np_set_current_var_type -> epsilon .)
    STRING          reduce using rule 43 (np_set_current_var_type -> epsilon .)
    BOOL            reduce using rule 43 (np_set_current_var_type -> epsilon .)
    ID              reduce using rule 43 (np_set_current_var_type -> epsilon .)


state 26

    (41) variable_declaration -> GROUP np_set_current_var_type . ID np_set_current_var_name ASSIGN data_type np_set_current_var_data_type np_add_variable OPEN_BRACKET np_add_dim1_list INT_VALUE np_add_dim1 CLOSE_BRACKET group1 SEMICOLON

    ID              shift and go to state 39


state 27

    (42) variable_declaration -> OBJ np_set_current_var_type . ID np_set_current_var_name ASSIGN ID OPEN_PARENTHESIS variable_declaration1 CLOSE_PARENTHESIS SEMICOLON np_add_variable

    ID              shift and go to state 40


state 28

    (156) function_declaration -> FUNCTION ID . np_add_function_internal_scope OPEN_PARENTHESIS parameter np_add_parameters_to_var_table CLOSE_PARENTHESIS RETURNS return_arg np_set_function_return_type OPEN_KEY variable_declaration_loop np_generate_variable_workspace np_add_function_start_quad function_statement_loop function_return CLOSE_KEY np_end_function
    (161) np_add_function_internal_scope -> . epsilon
    (167) epsilon -> .

    OPEN_PARENTHESIS reduce using rule 167 (epsilon -> .)

    np_add_function_internal_scope shift and go to state 41
    epsilon                        shift and go to state 42

state 29

    (2) main_function -> MAIN np_add_main_internal_scope . OPEN_PARENTHESIS CLOSE_PARENTHESIS OPEN_KEY variable_declaration_loop np_generate_variable_workspace np_add_function_start_quad statement_loop CLOSE_KEY np_end_function_main

    OPEN_PARENTHESIS shift and go to state 43


state 30

    (3) np_add_main_internal_scope -> epsilon .

    OPEN_PARENTHESIS reduce using rule 3 (np_add_main_internal_scope -> epsilon .)


state 31

    (25) class_declaration -> CLASS ID class_declaration1 . OPEN_KEY class_body CLOSE_KEY SEMICOLON constructor class_declaration2

    OPEN_KEY        shift and go to state 44


state 32

    (26) class_declaration1 -> IS . ID

    ID              shift and go to state 45


state 33

    (27) class_declaration1 -> epsilon .

    OPEN_KEY        reduce using rule 27 (class_declaration1 -> epsilon .)


state 34

    (40) variable_declaration -> VAR np_set_current_var_type data_type . np_set_current_var_data_type ID np_set_current_var_name SEMICOLON np_add_variable
    (44) np_set_current_var_data_type -> . epsilon
    (167) epsilon -> .

    ID              reduce using rule 167 (epsilon -> .)

    np_set_current_var_data_type   shift and go to state 46
    epsilon                        shift and go to state 47

state 35

    (100) data_type -> INT .

    ID              reduce using rule 100 (data_type -> INT .)
    OPEN_BRACKET    reduce using rule 100 (data_type -> INT .)
    OPEN_KEY        reduce using rule 100 (data_type -> INT .)
    SEMICOLON       reduce using rule 100 (data_type -> INT .)


state 36

    (101) data_type -> FLOAT .

    ID              reduce using rule 101 (data_type -> FLOAT .)
    OPEN_BRACKET    reduce using rule 101 (data_type -> FLOAT .)
    OPEN_KEY        reduce using rule 101 (data_type -> FLOAT .)
    SEMICOLON       reduce using rule 101 (data_type -> FLOAT .)


state 37

    (102) data_type -> STRING .

    ID              reduce using rule 102 (data_type -> STRING .)
    OPEN_BRACKET    reduce using rule 102 (data_type -> STRING .)
    OPEN_KEY        reduce using rule 102 (data_type -> STRING .)
    SEMICOLON       reduce using rule 102 (data_type -> STRING .)


state 38

    (103) data_type -> BOOL .

    ID              reduce using rule 103 (data_type -> BOOL .)
    OPEN_BRACKET    reduce using rule 103 (data_type -> BOOL .)
    OPEN_KEY        reduce using rule 103 (data_type -> BOOL .)
    SEMICOLON       reduce using rule 103 (data_type -> BOOL .)


state 39

    (41) variable_declaration -> GROUP np_set_current_var_type ID . np_set_current_var_name ASSIGN data_type np_set_current_var_data_type np_add_variable OPEN_BRACKET np_add_dim1_list INT_VALUE np_add_dim1 CLOSE_BRACKET group1 SEMICOLON
    (45) np_set_current_var_name -> . epsilon
    (167) epsilon -> .

    ASSIGN          reduce using rule 167 (epsilon -> .)

    np_set_current_var_name        shift and go to state 48
    epsilon                        shift and go to state 49

state 40

    (42) variable_declaration -> OBJ np_set_current_var_type ID . np_set_current_var_name ASSIGN ID OPEN_PARENTHESIS variable_declaration1 CLOSE_PARENTHESIS SEMICOLON np_add_variable
    (45) np_set_current_var_name -> . epsilon
    (167) epsilon -> .

    ASSIGN          reduce using rule 167 (epsilon -> .)

    np_set_current_var_name        shift and go to state 50
    epsilon                        shift and go to state 49

state 41

    (156) function_declaration -> FUNCTION ID np_add_function_internal_scope . OPEN_PARENTHESIS parameter np_add_parameters_to_var_table CLOSE_PARENTHESIS RETURNS return_arg np_set_function_return_type OPEN_KEY variable_declaration_loop np_generate_variable_workspace np_add_function_start_quad function_statement_loop function_return CLOSE_KEY np_end_function

    OPEN_PARENTHESIS shift and go to state 51


state 42

    (161) np_add_function_internal_scope -> epsilon .

    OPEN_PARENTHESIS reduce using rule 161 (np_add_function_internal_scope -> epsilon .)


state 43

    (2) main_function -> MAIN np_add_main_internal_scope OPEN_PARENTHESIS . CLOSE_PARENTHESIS OPEN_KEY variable_declaration_loop np_generate_variable_workspace np_add_function_start_quad statement_loop CLOSE_KEY np_end_function_main

    CLOSE_PARENTHESIS shift and go to state 52


state 44
